# a01

./: CMakeLists.txt  CMakeSettings.json  Makefile  README.md
configs/: a01.json
src/: CMakeLists.txt
src/algorithms/: CMakeLists.txt  simple.cpp
src/driver/: CMakeLists.txt  context.cpp  context.h  main.cpp  render.cpp
src/gi/: CMakeLists.txt  algorithm.h  bdpt.cpp  bdpt.h  buffer.h  camera.cpp  distribution.cpp  framebuffer.cpp  framebuffer.h  fresnel.h  json11.h  light.cpp  light.h  material.cpp  material.h  nanoflann.hpp  random.h  ray.h  sampling.h  scene.cpp  scene.h  surface.h  texture.cpp  texture.h
